--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,22 @@ body {
   cursor: pointer;
   padding-left: 5px;
 }
+
+.game-button-box {
+  font-size: 15pt;
+  font-family: 'Press Start 2p';
+  text-align: center;
+  display: inline-block;
+  margin: 5px;
+  font-weight: bold;
+  padding: 10px 0 10px 10px;
+  background-color: lightgray;
+  text-shadow: -1px -1px black, 1px 1px white;
+  color: gray;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -o-border-radius: 7px;
+  border-radius: 7px;
+  box-shadow: 0 0.2em gray;
+  cursor: pointer;
+}
